src/dotnet/Chat.UI.Blazor/Components/Navbar/navbar.css
.left-panel-buttons .btn.btn-square .navbar-button-content.btn-content {
    @apply w-10 md:w-12 h-10 md:h-12;
    @apply bg-white;
}

/* Group toggle button on the left side of the navbar */
.navbar-button {
    @apply relative;
    @apply flex-none flex-x items-stretch;
}
.navbar-button .left-line {
    @apply self-center;
    @apply h-12;
    @apply py-2;
    @apply rounded-full;
}
.navbar-button:not(.selected) .left-line {
    @apply invisible;
}
.navbar-button-content.btn-content {
    @apply justify-center;
    @apply p-1;
    @apply rounded-xl md:rounded-lg;
}

.navbar-button .badge {
    @apply absolute -right-0.5 -top-0.5;
    @apply min-w-4 min-h-4 w-4 h-4;
    @apply text-[10px];
    @apply bg-counter-navgroup;
}

/* Navbar content */
.navbar-content {
    @apply flex-auto flex-y overflow-y-hidden;
    @apply h-full;
}

/* Navbar group - the right part of the navbar */
.navbar-group {
    @apply flex-1 flex-y gap-y-1;
    @apply overflow-auto custom-scrollbar;
}

/* Navgar subgroup */
.navbar-subgroup {
    @apply flex-x justify-start items-center gap-x-1;
    @apply pt-2;
}
.navbar-subgroup.first {
    @apply pt-0;
}
.navbar-subgroup .navbar-subgroup-content {
    @apply text-03 text-xs font-semibold uppercase;
    @apply opacity-75;
}
.navbar-subgroup .navbar-subgroup-ending {
    @apply flex-1 justify-self-end;
    @apply flex-x justify-end gap-x-1;
    @apply text-03 text-xs font-light;
}

/* Navbar item */
.navbar-item {
    @apply relative;
    @apply flex-x justify-start items-center gap-x-1;
    @apply px-1 py-0.5;
    @apply rounded-lg;
}
.navbar-item .navbar-item-content {
    @apply flex-1 flex-x;
    @apply my-0.5 overflow-hidden;
    @apply text-02;
}
.navbar-item .navbar-item-ending {
    @apply flex-none justify-self-end;
    @apply flex-x justify-end items-center gap-x-2;
    @apply overflow-hidden;
}
.navbar-item .navbar-item-ending .slot {
    @apply flex-none flex-x items-center gap-x-2;
    @apply h-8 overflow-hidden;
}

body.hoverable .navbar-item:hover {
    @apply bg-round-hover;
}
.navbar-item:active {
    @apply bg-transparent border-x border-transparent;
}
.navbar-item.active {
    @apply bg-selected;
}
.navbar-item.active:active {
    @apply border-0;
}

.active-chats .navbar-subgroup .pin-toggle,
.active-chats .navbar-item .pin-toggle {
    @apply visible;
}

